/* --- Menu Bars ------------------------------------ */ .menu-bars {   position: fixed;   top: 1rem;   right: 2rem;   z-index: 10;   display: inline;   cursor: pointer; }

--- a/style.css
+++ b/style.css
@@ -157,7 +157,15 @@ nav, nav ul {
     }
   }
 
-
+/* --- Menu Bars ------------------------------------ */
+.menu-bars {
+  position: fixed;
+  top: 1rem;
+  right: 2rem;
+  z-index: 10;
+  display: inline;
+  cursor: pointer;
+}
 
 
 
